<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Choose one of the features below.</string>

    <string name="app_name">Dashboard Demo</string>
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>

    <string name="title_text">Around Me</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    
    <!-- Buttons -->
    <string name="btnFB"></string>
    <string name="btnSkip">Ver eventos</string>
    <string name="btnSettings">Definições</string>
    <string name="btnLeave">Sair</string>
    <string name="btn_route">Traçar Rota</string>
    <string name="btn_fb_options">Ver Opções</string>
    <string name="btn_fb_going">Eu Vou!</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_fb_friends_going">Amigos que vão</string>
    <string name="btn_fb_invite_friends">Convidar amigos</string>
    
    <!-- Titles -->
    <string name="title_text_event">Descrição do Evento</string>
    <string name="title_text_fb_goodies">Facebook</string>
 

</resources>
