<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com
    Derived from Google IO Schedule App, Copyright 2010 Google, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/title_text_event"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/title_text" />

        <TextView style="@style/TitleBarText" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="31dp" >

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >
        </LinearLayout>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnRoute"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:inputType="textPostalAddress" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/Button01"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/btnSettings" />

        <Button
            android:id="@+id/btnRoute"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Button01"
            android:text="@string/btn_route" />

        <Button
            android:id="@+id/btnFBoptions"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnRoute"
            android:layout_alignBottom="@+id/btnRoute"
            android:layout_alignParentRight="true"
            android:text="@string/btn_fb_options" />

        <Button
            android:id="@+id/btnFBgoing"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnFBoptions"
            android:text="@string/btn_fb_going" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnRoute"
            android:text="@string/btn_back" />

    </RelativeLayout>

</LinearLayout>